added citation styles

--- a/My Library.bib
+++ b/My Library.bib
@@ -27114,7 +27114,7 @@ Volume: 1},
 }
 
 @article{cortesEXPANDEDECOLOGICALRISK2015,
-	title = {{EXPANDED} {ECOLOGICAL} {RISK} {ASSESSMENT} {OF} {PELAGIC} {SHARKS} {CAUGHT} {IN} {ATLANTIC} {PELAGIC} {LONGLINE} {FISHERIES}},
+	title = {Expanded ecological risk assessment of pelagic sharks caught in Atlantinc pelagic longline fisheries},
 	abstract = {An Ecological Risk Assessment (ERA; also known as Productivity and Susceptibility Analysis, PSA) was conducted on sixteen species (15 sharks and 1 ray) or 20 stocks of pelagic elasmobranchs to assess their vulnerability to pelagic longline fisheries in the Atlantic Ocean. This was a quantitative assessment consisting of a risk analysis to evaluate the biological productivity of these stocks and a susceptibility analysis to assess their propensity to capture and mortality in pelagic longline fisheries. The risk analysis estimated productivity (maximum rate of increase, r) using a stochastic life table/Leslie matrix approach that incorporated uncertainty in age at maturity, lifespan, and both age-specific natural mortality and fecundity. Susceptibility to the fishery was calculated as the product of four components, which were also computed quantitatively: availability of the species to the fleet, encounterability of the gear given the species vertical distribution, gear selectivity, and post-capture mortality. Information from observer programs by ten ICCAT nations was used to derive fleet-specific susceptibility values. Three metrics were used to calculate vulnerability (Euclidean distance, a multiplicative index, and the arithmetic mean of the productivity and susceptibility ranks). The five stocks with the lowest productivity were the bigeye thresher (Alopias superciliosus), sandbar (Carcharhinus plumbeus), longfin mako (Isurus paucus), night (Carcharhinus signatus), and South Atlantic silky shark (Carcharhinus falciformis). The highest susceptibility values corresponded to shortfin mako (Isurus oxyrinchus), North and South Atlantic blue sharks (Prionace glauca), porbeagle (Lamna nasus), and bigeye thresher. Based on the arithmetic mean vulnerability index, which did not show preferential correlation with the productivity or susceptibility indices, the bigeye thresher, longfin and shortfin makos, porbeagle, and night sharks were the most vulnerable stocks. In contrast, North and South Atlantic scalloped hammerheads (Sphyrna lewini), smooth hammerhead (Sphyrna zygaena), and North and South Atlantic pelagic stingray (Pteroplatytrygon violacea) had the lowest vulnerabilities.},
 	language = {en},
 	author = {Cortés, E and Domingo, A and Miller, P and Forselledo, R and Mas, F and Arocha, F and Campana, S and Coelho, R and Silva, C Da and Hazin, F H V and Holtzhausen, H and Keene, K and Lucena, F and Ramirez, K and Santos, M N and Semba-Murakami, Y and Yokawa, K},
