some minor tweek

--- a/WoE.Rmd
+++ b/WoE.Rmd
@@ -101,13 +101,13 @@ For Sandbar shark, the current assessment is based on catch-only modelling and s
 
 For the indicator species, maintaining current management settings (i.e., assuming total catches are sustained at current levels) is predicted to maintain sustainability risk at acceptable levels. However, biomass trajectories showed considerable uncertainty due to the data-limited nature of the assessments and this should be taken into consideration for future management.
 
-For non-indicator species, the current assessment is based on catch-only modelling and spatio-temporal catch and effort distribution (Level 1), state space surplus production modelling fitted to abundance series (Level 4) and/or integrated population dynamics modelling (Level 5) fitted to abundance series and/or length composition data depending on data availability. Based on all available lines of evidence (see Weight of Evidence Tables below), the risk level over the next five years is estimated to be **High** for Angel sharks, **Medium** for Sawsharks, Copper and Spinner sharks, and  **Low** for the other non-indicator species. Non-indicator species are only a minor component of fisheries currently operating under the jurisdiction of WA and the highest sources of historic fishing mortality ceased decades ago. For two of the non-indicator species (Copper and Angel sharks), most of the catch has been taken by fisheries outside the jurisdiction of WA. Copper shark is a shared stock across southern Australia and most of the catch originates from South Australia’s Marine Scalefish Fishery whereas Angel sharks in WA are mostly captured by the Commonwealth’s Great Australian Bight Trawl Fishery and were classed as **High** risk due to the high uncertainty in the MSY inferred from catch-only modelling (see Level 1 Assessment below in 5.5.	Risk-based weight of evidence table: Non-indicator species). On the basis of this evidence, non-indicator species are classified as **Sustainable stocks**.
+For non-indicator species, the current assessment is based on catch-only modelling and spatio-temporal catch and effort distribution (Level 1), state space surplus production modelling fitted to abundance series (Level 4) and/or integrated population dynamics modelling (Level 5) fitted to abundance series and/or length composition data depending on data availability. Based on all available lines of evidence (see Weight of Evidence Tables below), the risk level over the next five years is estimated to be **High** for Angel sharks, **Medium** for Sawsharks, Copper and Spinner sharks, and  **Low** for the other non-indicator species. Non-indicator species are only a minor component of fisheries currently operating under the jurisdiction of WA and the highest sources of historic fishing mortality ceased decades ago. For two of the non-indicator species (Copper and Angel sharks), most of the catch has been taken by fisheries outside the jurisdiction of WA. Copper shark is a shared stock across southern Australia and most of the catch originates from South Australia’s Marine Scalefish Fishery whereas Angel sharks in WA are mostly captured by the Commonwealth’s Great Australian Bight Trawl Fishery and were classed as **High** risk due to the high uncertainty in the MSY inferred from catch-only modelling (see *Level 1 Assessment* below in *Risk-based weight of evidence table: Non-indicator species*). On the basis of this evidence, non-indicator species are classified as **Sustainable stocks**.
 
 
 # Future Monitoring & Assessment
 Additional information (e.g., a mortality estimate for a certain period from representative age composition data, a point estimate of absolute abundance from genetic techniques such as close-kin mark-recapture, Bravington et al. [-@bravingtonAbsoluteAbundanceSouthern2016]), would assist in reducing model uncertainties, particularly for those species for which reconstructed catches are not negligible but only catch and life history information are available. Also, life history information for most species is not stock-specific, and in a few cases, not species-specific. Hence, targeted collection of biological information (reproduction, growth) would assist future assessments as stock-specific information that is currently available is several decades old.
 
-The reliance on fishery-dependent catch per unit of effort (CPUE) data to inform depletion levels is evident for all species except sandbar shark for which reliable fishery-independent data are available. A long-term fishery-independent monitoring program to collect abundance and/or composition data, particularly in temperate WA, would also assist in reducing model uncertainties. This would be particularly useful for gummy, whiskery and dusky sharks, noting that some of the integrated model fit diagnostics were not passed (e.g., retrospective analysis and hindcasting for gummy shark, likelihood profiling for most assessed species) due to data limitations or could not be conducted, such as retrospective analysis and hindcasting, due to lack of recent data (e.g. dusky shark).
+The reliance on fishery-dependent catch per unit of effort (CPUE) data to inform depletion levels is evident for all species except sandbar shark for which reliable fishery-independent data are available. A long-term fishery-independent monitoring program to collect abundance and/or composition data, particularly in temperate WA, would also assist in reducing model uncertainties. This would be particularly useful for gummy, whiskery and dusky sharks, noting that some of the integrated model fit diagnostics were not passed (e.g., retrospective analysis and hindcasting for gummy shark, likelihood profiling for most assessed species) due to data limitations or could not be conducted, such as retrospective analysis and hindcasting, due to lack of recent data (e.g., dusky shark).
 
 From a modelling viewpoint, future surplus production models could explore the use of JABBA-select to allow incorporating CPUE series from fisheries with different selectivity schedules. It is also recommended that future integrated populations models attempt to better account for the spatial structure of the TDGDLF and the use of two different gillnet mesh sizes (6.5 and 7 inch). Future integrated models could also attempt to estimate Fishing mortality from published mark-recaptured data rather than input it as an additional CPUE series (current approach).
 
@@ -127,7 +127,7 @@ names.assessed.species<- paste(paste(assessed.species[1:(length(assessed.species
                              'and',assessed.species[length(assessed.species)])
 ```
 
-A PSA assessment was done to remove species with historically low catches from quantitative assessments and/or low or medium vulnerability (Appendix 3). Of the >100 species considered in this assessment, the following with high vulnerability to fishing were included for subsequent assessment: `r tolower(names.assessed.species)` (Figure 3).   
+A PSA assessment was done to remove species with historically low catches and/or low or medium vulnerability from quantitative assessments (Appendix 3). Of the >100 species considered in this assessment, the following with high vulnerability to fishing were included for subsequent assessment: `r tolower(names.assessed.species)` (Figure 3).   
 
 
 ```{r, echo=FALSE}
@@ -446,6 +446,7 @@ path=paste(Model.outputs.RAR,'/Spatio.temporal.effort.tiff',sep='')
 ```
 ![Figure A.6.1. Reported effort dynamics for WA’s shark fisheries. Heatmap of the distribution of relative effort (hook days for the NSF and km gillnet days for the TDGDLF) by 5-year intervals and 60 nm blocks.](`r path`){width=800px}
 
+
 The spatio-temporal distribution of reported catch for the TDGDLF is shown in Figures A.6.2 and A.6.3 for indicator and non-indicator species, respectively. 
 
 For each assessed species, a single Consequence and Likelihood value was selected based on the spatial and temporal dynamics of effort, the total number of blocks fished and the proportion of blocks fished with catch within each species core area. Market dynamics and species protection were also taken in consideration. For angel sharks, most of the catch has been taken by the Great Australian Bight (GAB) Trawl Fishery (managed by the Commonwealth) whereas for copper shark a large proportion of the catch has been taken by South Australia's Marine Scale Fishery (SA MSF). No spatio-temporal catch distribution data were available from these fisheries. However, effort has substantially decreased in recent years due to the introduction of a range of management measures [@afmaHarvestStrategyFramework2009; @steerAssessmentSouthAustralian2020; @nitschkeSpatiotemporalVariabilityDemersal2022]. Similarly, fisheries operating under WA's jurisdiction have also gone through a range of management measures aimed at reducing fishing effort [@Gaughan2019].
@@ -455,6 +456,7 @@ For each assessed species, a single Consequence and Likelihood value was selecte
 path=paste(Model.outputs.RAR,'/Spatio.temporal.catch_Indicator.sp.tiff',sep='')
 ```
 ![Figure A.6.2. Reported catch dynamics for the TDGDLF (indicator species). Proportion of blocks fished with reported catch (primary y axis, red dots) and total number of blocks fished (secondary y axis, grey line) within the species core area. The inset shows the species distribution within WA (green polygon) reported in https://www.cmar.csiro.au/data/caab and the species’ core area (black dots) within the fished zones. Core area was defined as the spatial blocks accounting for 95% of the catch.](`r path`){width=800px}
+
 
 ```{r, echo=FALSE}
 path=paste(Model.outputs.RAR,'/Spatio.temporal.catch_Other.sp.tiff',sep='')
@@ -602,7 +604,7 @@ Catch-MSY simulates a stock’s biomass trajectory using a catch time series and
 
 
 ## Simple Stock Synthesis (SSS)
-SSS is based on the Stock Synthesis stock assessment model [@methotStockSynthesisBiological2013], providing an age-structured alternative to the other COMs. SSS uses a Monte Carlo approach to draw samples of key input parameters, which are prespecified in the Stock Synthesis model, and estimates only the log of unexploited equilibrium recruitment (lnRo). Input parameters drawn from prior distributions included M, B~0~/K, B~f~/K, and steepness, *h*, the fraction of recruitment from a virgin population obtained when the population is at 20% virgin level. Other input parameters were prespecified at the midpoint of the reported range used for demographic modelling (Table A.9.1). Values of M were drawn from a lognormal distribution with mean and SD set at the mean and SD of the empirical M distribution obtained from the demographic analysis. Values of B~0~/K and B~f~/K were drawn from the prior distributions used for DB-SRA. Steepness (mean and SD) was calculated using the analytical solution derived by Brooks et al. [-@Brooks2010] and the life history information used in the demographic analysis. For great (*Sphyrna mokarran*) and smooth (*S. zygaena*) hammerheads and tiger (*Galeocerdo cuvier*), zebra and whiskery sharks, the derived *h* values were 0.77, 0.66, 0.70, 0.71 and 0.60, respectively. These high *h* values resulted from the combination of relatively high fecundity and substantial longevity (greatest for hammerheads and tiger shark), low juvenile mortality and early age at maturity. For sawsharks, green sawfish (*Pristis zijsron*) and milk shark (*Rhizoprionodon acutus*), the derived *h* values were 0.31, 0.36 and 0.44, respectively, which are considered likely to represent underestimates for these relatively productive species. Hence, alternative *h* values were also considered for sensitivity analysis. These alternative *h* values were derived from a linear model fitted to the *r* and *h* values calculated for the other assessed species (Figure A.10.1). For SSS, random values of *h* were drawn from a truncated beta distribution with mean and SD derived from the calculation of *h* described above and boundaries set at 0.3 and 0.8, respectively. The lower bound was set at 0.3 on the basis of the evolutionary principle that a minimum recruitment compensation is needed for population persistence given recruitment variability [@He2006]. The upper bound was set at the average *h* value for blue shark (*Prionace glauca*), considered to be one of the most productive shark species [@Cortes2016a; @Kai2018]. Model runs were retained if the difference between observed and predicted B~f~/K values was ≤0.01 [@copeImplementingStatisticalCatchatage2013]. Model parameter inputs are shown in Table A.10.3.
+SSS is based on the Stock Synthesis stock assessment model [@methotStockSynthesisBiological2013], providing an age-structured alternative to the other COMs. SSS uses a Monte Carlo approach to draw samples of key input parameters, which are prespecified in the Stock Synthesis model, and estimates only the log of unexploited equilibrium recruitment (lnRo). Input parameters drawn from prior distributions included M, B~0~/K, B~f~/K, and steepness, *h*, the fraction of recruitment from a virgin population obtained when the population is at 20% virgin level. Other input parameters were prespecified at the midpoint of the reported range used for demographic modelling (Table A.9.1). Values of M were drawn from a lognormal distribution with mean and SD set at the mean and SD of the empirical M distribution obtained from the demographic analysis. Values of B~0~/K and B~f~/K were drawn from the prior distributions used for DB-SRA. Steepness (mean and SD) was calculated using the analytical solution derived by Brooks et al. [-@Brooks2010] and the life history information used in the demographic analysis. For great (*Sphyrna mokarran*) and smooth (*S. zygaena*) hammerheads and tiger (*Galeocerdo cuvier*), zebra (*Stegostoma tigrinum*) and whiskery sharks, the derived *h* values were 0.77, 0.66, 0.70, 0.71 and 0.60, respectively. These high *h* values resulted from the combination of relatively high fecundity and substantial longevity (greatest for hammerheads and tiger shark), low juvenile mortality and early age at maturity. For sawsharks, green sawfish (*Pristis zijsron*) and milk shark (*Rhizoprionodon acutus*), the derived *h* values were 0.31, 0.36 and 0.44, respectively, which are considered likely to represent underestimates for these relatively productive species. Hence, alternative *h* values were also considered for sensitivity analysis. These alternative *h* values were derived from a linear model fitted to the *r* and *h* values calculated for the other assessed species (Figure A.10.1). For SSS, random values of *h* were drawn from a truncated beta distribution with mean and SD derived from the calculation of *h* described above and boundaries set at 0.3 and 0.8, respectively. The lower bound was set at 0.3 on the basis of the evolutionary principle that a minimum recruitment compensation is needed for population persistence given recruitment variability [@He2006]. The upper bound was set at the average *h* value for blue shark (*Prionace glauca*), considered to be one of the most productive shark species [@Cortes2016a; @Kai2018]. Model runs were retained if the difference between observed and predicted B~f~/K values was ≤0.01 [@copeImplementingStatisticalCatchatage2013]. Model parameter inputs are shown in Table A.10.3.
 
 <!---BLOCK_LANDSCAPE_START--->
 <!-- DBSRA scenarios -->
@@ -757,7 +759,7 @@ path=paste(Model.outputs.RAR,'/Catch_vs_MSY_catch.only_Other.sp.tiff',sep='')
 <br>
 
 # Appendix 11. State-space surplus production modelling
-State-space surplus production models were fitted to catch and abundance series derived from standardised commercial catch and effort [@bracciniSpatialTemporalPatterns2021] and/or a fishery-independent survey [@Braccini2020] using JABBA, Just Another Bayesian Biomass Assessment [@winkerJABBAJustAnother2018]. The survey collects abundance data as shark numbers so it was converted to biomass by multiplying numbers by the reported average annual weight [@Braccini2020]. A full description of the JABBA model (state-space implementation, prior specification options, diagnostic tools, etc.) is available in Winker et al. [-@winkerJABBAJustAnother2018]. JABBA is implemented in R with a JAGS interface [@Plummer2003] to estimate the Bayesian posterior distributions using Markov Chains Monte Carlo (MCMC) simulations. A Pella-Tomlinson production function was used by setting the inflection point B~MSY~/K and converting this ratio into a shape parameter *m* that determines at which B/K ratio maximum surplus production is attained. Schaefer and Fox production functions were considered as sensitivity tests. We used two MCMC chains each of 30,000 iterations, sampled with a burn-in period of 5,000 iterations and thinning rate of five iterations (e.g., Winker et al. [-@Winker2019]). Model diagnostics included Bayesian fit diagnostics (visualization of the MCMC chains, posterior densities, autocorrelation and the Gelman et al. [-@Gelman2003] and Geweke [-@Geweke1992] diagnostics as implemented in the *ggmcmc* R package [@FernandezMarin2016]) and model goodness-of-fit, retrospective analysis and prediction skill as implemented in the *ss3diags* R package [@carvalhoCookbookUsingModel2021]. Key priors required are *r*, K and B~0~/K whereas priors for B~MSY~/K, and process error were also specified (Table A.11.1). A lognormal distribution was used for *r* and K and a beta distribution was used for B~0~/K as it is considered to have better convergence properties than uniform priors [@winkerJABBAJustAnother2018]. For *r*, the mean and CV were obtained from the demographic modelling. For K, the mean was set at the average of the uniform distribution used in the COMs, and the CV was prespecified at 200% (Winker et al., 2019). A uniform distribution, prespecified at the range used for the COMs, was considered as a sensitivity. For B~0~/K, the mean was prespecified the average of the lower and upper bounds of the B~0~/K distribution used in the COMs and the CV was calculated as the SD of those distribution over the mean. Process error was prespecified at 0.05, which assumes low stochastic variation in biomass given sharks productivity (Winker et al., 2019). We used the same B~MSY~/K values used in the DB-SRA modelling. 
+State-space surplus production models were fitted to catch and abundance series derived from standardised commercial catch and effort [@bracciniSpatialTemporalPatterns2021] and/or a fishery-independent survey [@Braccini2020] using JABBA, Just Another Bayesian Biomass Assessment [@winkerJABBAJustAnother2018]. The survey collects abundance data as shark numbers so it was converted to biomass by multiplying numbers by the reported average annual weight [@Braccini2020]. A full description of the JABBA model (state-space implementation, prior specification options, diagnostic tools, etc.) is available in Winker et al. [-@winkerJABBAJustAnother2018]. JABBA is implemented in R with a JAGS interface [@Plummer2003] to estimate the Bayesian posterior distributions using Markov Chains Monte Carlo (MCMC) simulations. A Pella-Tomlinson production function was used by setting the inflection point B~MSY~/K and converting this ratio into a shape parameter *m* that determines at which B/K ratio maximum surplus production is attained. Schaefer and Fox production functions were considered as sensitivity tests. We used two MCMC chains each of 30,000 iterations, sampled with a burn-in period of 5,000 iterations and thinning rate of five iterations (e.g., Winker et al. [-@Winker2019]). Model diagnostics included Bayesian fit diagnostics (visualization of the MCMC chains, posterior densities, autocorrelation and the Gelman et al. [-@Gelman2003] and Geweke [-@Geweke1992] diagnostics as implemented in the *ggmcmc* R package [@FernandezMarin2016]) and model goodness-of-fit, retrospective analysis and prediction skill as implemented in the *ss3diags* R package [@carvalhoCookbookUsingModel2021]. Key priors required are *r*, K and B~0~/K whereas priors for B~MSY~/K, and process error were also specified (Table A.11.1). A lognormal distribution was used for *r* and K and a beta distribution was used for B~0~/K as it is considered to have better convergence properties than uniform priors [@winkerJABBAJustAnother2018]. For *r*, the mean and CV were obtained from the demographic modelling. For K, the mean was set at the average of the uniform distribution used in the COMs, and the CV was prespecified at 200% (Winker et al., 2019). A uniform distribution, prespecified at the range used for the COMs, was considered as a sensitivity. For B~0~/K, the mean was prespecified to the average of the lower and upper bounds of the B~0~/K distribution used in the COMs and the CV was calculated as the SD of those distribution over the mean. Process error was prespecified at 0.05, which assumes low stochastic variation in biomass given sharks productivity (Winker et al., 2019). We used the same B~MSY~/K values used in the DB-SRA modelling. 
 
 Standardisation of CPUE can yield very small CVs (as observed for the analysed species); hence, the minimum CV used in the models was extracted from fitting a simple smoother to the CPUE data (on the natural log scale) and estimating the residual variance [@Francis2011]. A thorough description of this method can be found in Courtney et al. [-@courtneyStockSynthesisSS32017]. 
 
@@ -1138,7 +1140,7 @@ Life history inputs (M~*a*~, fecundity, maturity, reproductive cycle length, gro
 
 The start and end years of the model were 1941 and 2021, respectively. Initial fishing mortality was not estimated as fishing was assumed to be negligible prior to 1941 [@Braccini2021]. Available time series of catch, abundance, length composition and mean body weight data (Figure A.12.2) were assigned to 'fleets' and 'surveys' (Table A.12.1). For dusky shark, abundance series were not considered for reasons explained in Appendix 11 so a catch-length model was constructed [@Rudd2021]. Catch-length models were also built for smooth hammerhead and spinner shark because abundance time series were not available for smooth hammerhead and available TDGDLF CPUE was not considered to represent abundance trend for spinner shark as explained in Appendix 11.
 
-Gear selectivity estimates for the main fleets capturing the assessed species were only available or could be estimated for dusky, gummy, milk, sandbar, spinner and whiskery sharks, and smooth hammerhead. Hence, Stock Synthesis models were built for these species only. Logistic and dome-shaped selectivity functions were assumed depending on the characteristics of the different fleets and species (Appendix 13). For the southern shark fisheries, which use predominately gillnets, dome-shaped selectivity parameters were mostly estimated using the empirical estimates derived by Kirkwood and Walker [-@Kirkwood1986a], Simpfendorfer and Unsworth [-@Simpfendorfer1998c], McAuley et al. [-@McAuley2007a] and Braccini et al. [-@Braccini2022], as initial values although for spinner shark, due to data limitations, they were mostly prespecified to the values reported by Braccini et al. [-@Braccini2022] for the family Carcharhinidae. For the northern shark fisheries, which used predominately hooks, (asymptotic) logistic selectivity parameters were estimated for milk shark or prespecified at 50% length at maturity for spinner shark, as mostly adult individuals were caught by these fisheries. For the other species taken in the northern shark fisheries, dome-shaped selectivity was assumed given their large size and capacity to bend hooks, which was reflected in the small number of large individuals in the length composition. For the Indonesian, Taiwanese and other fleets, selectivity was mirrored the northern shark fisheries selectivity. For dusky shark, given the current maximum retention size limit (70 cm inter dorsal length), a retention function was implemented with discard mortality pre-specified at 60% [@bracciniHighPostcaptureSurvival2012]. Sex-specific length composition from the northern and southern shark fisheries were collected by onboard observers as fork length (FL) [@Braccini2016b]. This was input into Stock Synthesis as total length (TL) applying published conversion factors [@bartesLengthLengthRelationships2023]. For each fleet, only years with at least 150 observations were included. The TL data were compiled in length bins of 5 cm. Due to the limited number of observations by sex, male and female length composition was combined for milk shark for the northern shark fisheries and the survey, for dusky shark for the survey, and for smooth hammerhead for the southern shark fisheries. Male selectivity was estimated as a female selectivity offset for sandbar shark for the northern shark fisheries and for whiskery and gummy sharks for the southern shark fisheries. For other species/fleets, males and females were assumed to have equal selectivity. 
+Gear selectivity estimates for the main fleets capturing the assessed species were only available or could be estimated for dusky, gummy, milk, sandbar, spinner and whiskery sharks, and smooth hammerhead. Hence, Stock Synthesis models were built for these species only. Logistic and dome-shaped selectivity functions were assumed depending on the characteristics of the different fleets and species (Appendix 13). For the southern shark fisheries, which use predominately gillnets, dome-shaped selectivity parameters were mostly estimated using the empirical estimates derived by Kirkwood and Walker [-@Kirkwood1986a], Simpfendorfer and Unsworth [-@Simpfendorfer1998c], McAuley et al. [-@McAuley2007a] and Braccini et al. [-@Braccini2022], as initial values although for spinner shark, due to data limitations, they were mostly prespecified to the values reported by Braccini et al. [-@Braccini2022] for the family Carcharhinidae. For the northern shark fisheries, which used predominately hooks, (asymptotic) logistic selectivity parameters were estimated for milk shark or prespecified at 50% length at maturity for spinner shark, as mostly adult individuals were caught by these fisheries. For the other species taken in the northern shark fisheries, dome-shaped selectivity was assumed given their large size and capacity to bend hooks, which was reflected in the small number of large individuals in the length composition. For the Indonesian, Taiwanese and other fleets, selectivity was mirrored to the northern shark fisheries selectivity. For dusky shark, given the current maximum retention size limit (70 cm inter dorsal length), a retention function was implemented with discard mortality pre-specified at 60% [@bracciniHighPostcaptureSurvival2012]. Sex-specific length composition from the northern and southern shark fisheries were collected by onboard observers as fork length (FL) [@Braccini2016b]. This was input into Stock Synthesis as total length (TL) applying published conversion factors [@bartesLengthLengthRelationships2023]. For each fleet, only years with at least 150 observations were included. The TL data were compiled in length bins of 5 cm. Due to the limited number of observations by sex, male and female length composition was combined for milk shark for the northern shark fisheries and the survey, for dusky shark for the survey, and for smooth hammerhead for the southern shark fisheries. Male selectivity was estimated as a female selectivity offset for sandbar shark for the northern shark fisheries and for whiskery and gummy sharks for the southern shark fisheries. For other species/fleets, males and females were assumed to have equal selectivity. 
 
 Following Francis [-@Francis2011], we employed the two-stage data weighting approach available in SS3 to iteratively tune variance adjustment factors for fleet-specific abundance indices externally to the model (Stage 1) and length composition data within SS3 (Stage 2). For the abundance indices, the same weighting process applied for building the JABBA models was applied (see Appendix 11). For the length composition data (Stage 2), the *r4ss* package was used to estimate the effective sample size of each data set based on Francis' [-@Francis2011] method and the residuals of the Stock Synthesis model fit (e.g., Courtney et al. [-@courtneyStockSynthesisSS32017]).
 
